--- a/9PurchaseOrderReport/Translations/PurchaseOrderReport.g.xlf
+++ b/9PurchaseOrderReport/Translations/PurchaseOrderReport.g.xlf
@@ -53,6 +53,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel ToTalInvoice</note>
         </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 1713889359 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Additional company name field.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field Name2 - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 1713889359 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Name2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field Name2 - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PermissionSet 1553828550 - Property 2879900210" maxwidth="30" size-unit="char" translate="yes" xml:space="preserve">
           <source>Permissions</source>
           <note from="Developer" annotates="general" priority="2"></note>
