--- a/9PurchaseOrderReport/Translations/PurchaseOrderReport.g.xlf
+++ b/9PurchaseOrderReport/Translations/PurchaseOrderReport.g.xlf
@@ -23,10 +23,15 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel DeliveryDatelbl</note>
         </trans-unit>
-        <trans-unit id="Report 2261338465 - ReportLabel 352673507" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Information Clause</source>
+        <trans-unit id="Report 2261338465 - ReportLabel 1294381530" size-unit="char" translate="yes" xml:space="preserve">
+          <source>FACTORY. Tel. +</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel InformationClause</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel Factorylbl</note>
+        </trans-unit>
+        <trans-unit id="Report 2261338465 - ReportLabel 1704563417" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. </source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel Footerlbl</note>
         </trans-unit>
         <trans-unit id="Report 2261338465 - ReportLabel 1265005185" size-unit="char" translate="yes" xml:space="preserve">
           <source>Invoice Date:</source>
@@ -38,15 +43,15 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel InvoiceNolbl</note>
         </trans-unit>
-        <trans-unit id="Report 2261338465 - ReportLabel 2437342361" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Con el siguiente texto fijo: “De conformidad con el artículo 13 de la sección 2 del Reglamento (UE) 2016/679 del Parlamento Europeo y del Consejo, de 27 de abril de 2016 y la Ley Orgánica 3/2018, relativo a la protección de las personas físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos, le informamos que el responsable del tratamiento es CLÍNICA LA ARRUZAFA, S.L., que dicho tratamiento se lleva a cabo para la gestión contable, fiscal y administrativa y para el envio de comunicaciones comerciales sobre productos y servicios de la Clínica que ser de su interés. La base legal que permite legitimar este tratamiento el cumplimiento de una obligación legal. Se comunicarán datos a terceros para poder llevar a cabo las finalidades objeto de este contrato. Puede usted acceder, rectificar y suprimir sus datos, así como otros derechos, dirigiéndose por escrito a nuestro Delegado de Protección de Datos m.montaldo@compliancecorporativo.es. Puede usted obtener información ampliada sobre protección de datos solicitándola a nuestro Delegado de Protección de Datos m.montaldo@compliancecorporativo.es”.</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel LawText</note>
-        </trans-unit>
         <trans-unit id="Report 2261338465 - ReportLabel 2834676957" size-unit="char" translate="yes" xml:space="preserve">
           <source>N.I.F.:</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel NIFlbl</note>
+        </trans-unit>
+        <trans-unit id="Report 2261338465 - ReportLabel 3763250494" size-unit="char" translate="yes" xml:space="preserve">
+          <source>OFFICE. Tel. +</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report PedidoCompraReport - ReportLabel Officelbl</note>
         </trans-unit>
         <trans-unit id="Report 2261338465 - ReportLabel 3345757309" size-unit="char" translate="yes" xml:space="preserve">
           <source>Total Invoice EUR:</source>
@@ -62,6 +67,26 @@
           <source>Name2</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field Name2 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 2826422681 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Secondary phone number for the company.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field PhoneNo2 - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 2826422681 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Phone 2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field PhoneNo2 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 1237689382 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Province of the company address.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field Province - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 4144265336 - Field 1237689382 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3469146285">
+          <source>Province</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension CompanyInformationTableExt - Field Province - Property Caption</note>
         </trans-unit>
         <trans-unit id="PermissionSet 1553828550 - Property 2879900210" maxwidth="30" size-unit="char" translate="yes" xml:space="preserve">
           <source>Permissions</source>
